--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container" >
             <div id="one"><h2>THE DAILY DRIBBLE</h2>
-               <img src="https://media.discordapp.net/attachments/1396032744429060247/1400780679721254974/stadium.jpg?ex=6985136b&is=6983c1eb&hm=0f1fcc7300bf0fec4d572c485b6e3e4c2e319442bd6a8bd3c464b00bb23ddc93&=&format=webp&width=315&height=210"/>
+               <img src="https://media.discordapp.net/attachments/1396032744429060247/1400780680073580614/Screenshot_2025-08-01_at_3.31.26_PM.png?ex=69870dab&is=6985bc2b&hm=30de1883248884224b629b6028f80b5a216233a4682499f8f61310d1f8c2ad50&=&format=webp&quality=lossless&width=379&height=465"/>
             <br>
             <p class="one">Your daily dose of soccer stories from on and offthe pitch,interviews,analyses,breaking news and more!</p>
     
