--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container" >
             <div id="one"><h2>THE DAILY DRIBBLE</h2>
-               <img src="https://media.discordapp.net/attachments/1396032744429060247/1400780680073580614/Screenshot_2025-08-01_at_3.31.26_PM.png?ex=69870dab&is=6985bc2b&hm=30de1883248884224b629b6028f80b5a216233a4682499f8f61310d1f8c2ad50&=&format=webp&quality=lossless&width=379&height=465"/>
+               <img src="https://media.discordapp.net/attachments/1396032744429060247/1400780679721254974/stadium.jpg?ex=69870dab&is=6985bc2b&hm=a4f65af672fe5dd9e0eb59cc2f155c6baf671f4ee86beac5facd18108195073e&=&format=webp"/>
             <br>
             <p class="one">Your daily dose of soccer stories from on and offthe pitch,interviews,analyses,breaking news and more!</p>
     
